feat: v0.2 구현 조커게임, 플레이어 및 인공지능 대결 구현 동물포커게임 구현 승패 결과 구현 메인 로고 변경 기타 버그 수정

--- a/src/components/Room-components/PokerRoom/BubbleSpeech.scss
+++ b/src/components/Room-components/PokerRoom/BubbleSpeech.scss
@@ -1,7 +1,13 @@
-.center{
+.left-center{
     position: relative;
     top: 30%;
     left: 65%;
+}
+
+.right-center{
+    position: relative;
+    top: 30%;
+    left: 5%;
 }
 
 .dialog{
@@ -10,9 +16,23 @@
     background-color: white;
     position: absolute;
     border-radius: 10%;
+	z-index: 1;
 }
 
-.point{
+.right-point{
+	width: 0;
+	height: 0;
+	border-left: 1vh solid transparent;
+	border-right: 1vh solid transparent;
+	border-top: 3vh solid white;
+	position: absolute;
+	top: 45%;
+	right: -10%;
+	transform: rotate(-60deg);
+	z-index: 2;
+}
+
+.left-point{
 	width: 0;
 	height: 0;
 	border-left: 1vh solid transparent;
